# MichelSaad

./: .gitignore  index.html  pyproject.toml  style.css  votes_tracking.py
.devcontainer/: devcontainer.json
data/: final--القاع-2025-filtered.xlsx
pop_analysis/: data_analyzer.py  streamlit_app.py
