[tool.poetry]
name = "michel-saad"
version = "0.1.0"
description = "analysis for the Michel Saad campaign"
authors = ["Jean Marc <jean.marc@synthexhq.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
plotly = "^5.22.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.5"
streamlit = "^1.45.0"
fpdf2 = "^2.8.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 